# tiny-stubgen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  api.md  architecture.md  cli.md  examples.md  limitations.md  release.md  stability.md  usage.md
docs/en/: README.md  api.md  architecture.md  cli.md  examples.md  limitations.md  release.md  stability.md  usage.md
docs/zh/: README.md  examples.md  release.md
examples/: 01_basic_types.py  01_basic_types.pyi  02_functions.py  02_functions.pyi  03_classes.py  03_classes.pyi  04_decorators.py  04_decorators.pyi  05_dataclasses.py  05_dataclasses.pyi  06_imports_and_exports.py  06_imports_and_exports.pyi  07_conditionals.py  07_conditionals.pyi  08_generics.py  08_generics.pyi  09_enums.py  09_enums.pyi
scripts/: check_docs.py
src/tiny_stubgen/: __init__.py  __main__.py  api.py  cli.py  emitter.py  extractor.py  inferrer.py  models.py  policies.py  resolver.py  utils.py
src/tiny_stubgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_api.py  test_check_docs.py  test_cli.py  test_emitter.py  test_extractor.py  test_fixtures.py  test_hypothesis.py  test_inferrer.py  test_models.py  test_resolver.py  test_utils.py
tests/fixtures/: class_attrs.py  class_attrs.pyi  dataclass_module.py  dataclass_module.pyi  decorators.py  decorators.pyi  property_module.py  property_module.pyi  simple_module.py  simple_module.pyi  type_checking.py  type_checking.pyi
