[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-stubgen"
dynamic = ["version"]
description = "A Python stub (.pyi) file generator with enhanced type inference"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "MrLYC", email = "imyikong@gmail.com"},
]
keywords = ["stub", "pyi", "type-hints", "typing", "stubgen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/MrLYC/tiny-stubgen"
Repository = "https://github.com/MrLYC/tiny-stubgen"
Issues = "https://github.com/MrLYC/tiny-stubgen/issues"
Changelog = "https://github.com/MrLYC/tiny-stubgen/blob/main/CHANGELOG.md"

[project.scripts]
tiny-stubgen = "tiny_stubgen.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.dynamic]
version = {attr = "tiny_stubgen.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tiny_stubgen = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
extend-exclude = ["examples/*.pyi"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/**" = ["F401"]
"examples/**" = ["F401"]
