[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-stubgen"
dynamic = ["version"]
description = "A Python stub (.pyi) file generator with enhanced type inference"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "MrLYC", email = "imyikong@gmail.com"},
]
keywords = ["stub", "pyi", "type-hints", "typing", "stubgen"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/MrLYC/tiny-stubgen"
Documentation = "https://github.com/MrLYC/tiny-stubgen/blob/main/docs/README.md"
Issues = "https://github.com/MrLYC/tiny-stubgen/issues"
Changelog = "https://github.com/MrLYC/tiny-stubgen/blob/main/CHANGELOG.md"

[project.scripts]
tiny-stubgen = "tiny_stubgen.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.1",
    "twine>=5.0",
]

[tool.setuptools.dynamic]
version = {attr = "tiny_stubgen.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tiny_stubgen = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
]
xfail_strict = true

[tool.coverage.run]
source = ["tiny_stubgen"]
branch = true

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
files = ["src/tiny_stubgen"]
strict = true
pretty = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
extend-exclude = ["examples/*.pyi", "tests/fixtures/*.pyi"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/**" = ["F401", "F821"]
"examples/**" = ["F401"]
